<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >

    <string name="section_measure">Measure</string>
    <string name="section_mapview">Map view</string>
    <string name="measure_distance">Distance</string>
    <string name="measure_area">Area</string>
    <string name="mapview_map">Map</string>
    <string name="mapview_satellite">Satellite</string>
    <string name="mapview_terrain">Terrain</string>
    <string name="metric">Metric units</string>
    <string name="about">About</string>
    <string name="about_text">This app was created by Thomas Hoffmann (<a href="http://www.j4velin.de">www.j4velin.de</a>) and uses the \'Google Maps API v2\'.\n\nMaps Measure is open source! Get the code from <a href="https://github.com/j4velin/MapsMeasure">GitHub</a>.\n\n</string>
    <string name="app_version">App version: %s</string>
    <string name="moreapps">More apps</string>
    <string name="delete">delete</string>
    <plurals name="delete_all">
        <item quantity="one">Delete %d point?</item>
        <item quantity="other">Delete all %d points?</item>
    </plurals>
    <string name="menu">Menu</string>
    <string name="my_location">My location</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
    <string name="units_distance">%1$s m\n%2$s km\n\n%3$s ft\n%4$s yd\n%5$s mi\n%6$s nautical miles</string>
    <string name="units_area" translatable="false">%1$s m²\n%2$s ha\n%3$s km²\n\n%4$s ft²\n%5$s ac (U.S. Survey)\n%6$s mi²</string>
    <string name="no_location_found">No location found</string>
    <string name="units">Units</string>
    <string name="savenshare">Save &amp; share</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="share">Share</string>
    <string name="file_saved">File saved</string>
    <string name="error">Error: %s</string>
    <string name="select_file">Select file</string>
    <string name="old_files">Files saved by older versions</string>
    <string name="marker_on_current_location">A marker was added on your current location</string>
</resources>